[project]
name = "depthai_viewer_backend"
version = "0.0.1"
authors = [{ name = "Filip Jeretina", email = "filip.jeretina@luxonis.com" }]
description = "DepthAi Viewer Backend"

[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"


dependencies = [
  "depthai-sdk",
  # git+https://github.com/luxonis/depthai@sdk_pointcloud#egg=depthai-sdk&subdirectory=depthai_sdk
  "depthai",
  "numpy==1.24.*",
  # deptai viewer
  # git+https://github.com/zrezke/rerun@ai-support#egg=rerun-sdk&subdirectory=rerun_py
  "rerun_sdk",
  "ahrs",
]
